# llm-rpg

./: .gitignore  pyproject.toml
llm-rpg/: brain.py  constants.py  game_map.py  globals.py  llm.py  main.py  npc.py  pathfinding.py  plan.md  tests.py
llm-rpg/archive/: main.py  old.py  pygame_attempt.py  pygame_v1.py  refactor.py
