[tool.poetry]
name = "llm-rpg"
version = "0.1.0"
description = ""
authors = ["chryron <nazmus.saadat1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
arcade = "^2.6.17"
langchain = "^0.0.306"
openai = "^0.28.1"
pathfinding = "^1.0.4"
pygame = "^2.5.2"
pytest = "^7.4.2"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
